# Pytuck-view

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  tasks.py
pytuck_view/: __init__.py  __main__.py  app.py
pytuck_view/api/: files.py  routes.py  tables.py
pytuck_view/base/: context.py  exceptions.py  frontend_i18n.py  i18n.py  middleware.py  response.py  schemas.py  setup.py
pytuck_view/basic/: __init__.py  context.py
pytuck_view/common/: logger.py  schemas.py  tiny_func.py
pytuck_view/services/: database.py  file_manager.py
pytuck_view/static/: app.css  app.js  index.html
pytuck_view/templates/: index.html
pytuck_view/utils/: __init__.py  logger.py  schemas.py  tiny_func.py
