[project]
name = "pytuck-view"
version = "0.3.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pytuck[all]>=0.7.1",
    "uvicorn>=0.20.0",
]

[build-system]
requires = ["setuptools>=80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pytuck_view", "pytuck_view.api", "pytuck_view.base", "pytuck_view.services", "pytuck_view.utils"]
include-package-data = true

[tool.setuptools.package-data]
# 仅包含必需的静态资源，排除运行时生成的翻译文件
pytuck_view = [
    "static/*.html",
    "static/*.css",
    "static/*.js",
]

[dependency-groups]
# uv dev 依赖组（PEP 735）：仅用于开发/CI，不进入运行时依赖链
dev = [
    "setuptools>=80.10.2",
    "ruff>=0.14.13",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "invoke>=2.0.0",
]

# 打包依赖组：用于构建 wheel、zipapp、exe 等发布产物
build = [
    "build>=1.0.0",          # PEP 517 标准构建工具
    "wheel>=0.42.0",         # wheel 格式支持
    "nuitka>=2.0.0",         # 用于打包成独立可执行文件
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# 规则选择保持克制：优先抓出真实问题，避免引入过多争议性规则
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
# 与 black/ruff 默认风格保持一致
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
warn_unused_configs = true

# 第三方库未提供类型时，允许跳过（否则 strict 会被大量 import 错误淹没）
ignore_missing_imports = true

[tool.pytest.ini_options]
# 约定测试目录
testpaths = ["tests"]
addopts = "-q"
